{
  "version": 4,
  "terraform_version": "0.13.0",
  "serial": 54,
  "lineage": "57ebcba0-66cb-82d6-eb22-000bcaf3c854",
  "resources": [
    {
      "module": "module.quickinstance[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bcc094591f354be2",
            "arn": "arn:aws:ec2:us-east-1:228435919907:instance/i-0a460a450e3fae62e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a460a450e3fae62e",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "hillel",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07c151375b9394dfa",
            "private_dns": "ip-172-31-55-161.ec2.internal",
            "private_ip": "172.31.55.161",
            "public_dns": "ec2-54-166-128-87.compute-1.amazonaws.com",
            "public_ip": "54.166.128.87",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0eb09450e7f1dcde2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "temporary20200829110121206200000002",
              "trafic 6100 port20200829110121201300000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0522022bb373c2318",
            "tags": {
              "Name": "temporary server",
              "Project": "hillel",
              "Purpose": "education"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d6218146c6353839",
              "sg-0e01356bec5630c4c"
            ]
          },
          "dependencies": [
            "module.quickinstance.aws_key_pair.payvinhillel",
            "module.quickinstance.aws_security_group.that",
            "module.quickinstance.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.quickinstance[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "that",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:228435919907:security-group/sg-0d6218146c6353839",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow TCP port 6100 out trafic",
                "from_port": 61001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 61001
              }
            ],
            "id": "sg-0d6218146c6353839",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow TCP port 6100 in trafic",
                "from_port": 61001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 61001
              }
            ],
            "name": "trafic 6100 port20200829110121201300000001",
            "name_prefix": "trafic 6100 port",
            "owner_id": "228435919907",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0665ee81786440e63"
          }
        }
      ]
    },
    {
      "module": "module.quickinstance[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:228435919907:security-group/sg-0e01356bec5630c4c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e01356bec5630c4c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP fron anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS fron anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH fron anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH fron anywhere",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "temporary20200829110121206200000002",
            "name_prefix": "temporary",
            "owner_id": "228435919907",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0665ee81786440e63"
          }
        }
      ]
    }
  ]
}